# oc-cc-proxy

./: .env.example  AGENTS.md  README.md  pyproject.toml
examples/: claude-code-settings.json
openspec/changes/add-litellm-claude-code-proxy/: design.md  proposal.md  tasks.md
openspec/changes/add-litellm-claude-code-proxy/specs/claude-code-proxy/: spec.md
src/oc_cc_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oc_proxy/: __init__.py  cli.py  config.py  reasoning.py  validation.py
tests/: test_config.py  test_reasoning.py  test_validation.py
