[project]
name = "oc-cc-proxy"
version = "0.1.1"
description = "Local LiteLLM proxy for routing Claude Code to OpenCode Go."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "litellm[proxy]>=1.83.14",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/iTzFaisal/oc-cc-proxy"
Repository = "https://github.com/iTzFaisal/oc-cc-proxy"

[project.scripts]
oc-cc-proxy = "oc_proxy.cli:main"
oc-cc-proxy-validate = "oc_proxy.validation:main"


[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.12"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
